--- a/DotNetSummitMobileApp/Pages/ProgramPage.xaml
+++ b/DotNetSummitMobileApp/Pages/ProgramPage.xaml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="DotNetSummitMobileApp.Pages.ProgramPage">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="DotNetSummitMobileApp.Pages.ProgramPage"
+    BackgroundColor="White">
 	<ContentPage.Content>
         <StackLayout
             HorizontalOptions="FillAndExpand"
@@ -25,7 +26,7 @@
                 Margin="0">
                 <ListView.GroupHeaderTemplate>
                     <DataTemplate>
-                        <ViewCell>
+                        <ViewCell Height="48">
                             <StackLayout BackgroundColor="#EFEFF4">
                                 <Label Text="{Binding Key}" FontSize="14" TextColor="Black" FontAttributes="Bold" VerticalOptions="FillAndExpand" VerticalTextAlignment="Center" Margin="16, 0" />
                             </StackLayout>
