--- a/DotNetSummitMobileApp/Pages/DemoPage.xaml
+++ b/DotNetSummitMobileApp/Pages/DemoPage.xaml
@@ -4,6 +4,13 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
     x:Class="DotNetSummitMobileApp.Pages.DemoPage">
 	<ContentPage.Content>
-        
+        <StackLayout x:Name="LayoutRoot" Padding="0" Spacing="0">
+            <Button Text="Button1" BackgroundColor="Blue" TextColor="White" BorderRadius="0" BorderWidth="5" BorderColor="Lime" />
+            <Button Text="Button2" BackgroundColor="Blue" TextColor="White" BorderRadius="0" BorderWidth="5" BorderColor="Lime" />
+
+            <StackLayout BackgroundColor="Maroon" Padding="16">
+                <Entry Placeholder="Text Goes Here" PlaceholderColor="Aqua" />
+            </StackLayout>
+        </StackLayout>
 	</ContentPage.Content>
 </ContentPage>
