--- a/DotNetSummitMobileApp/Pages/SpeakersPage.xaml
+++ b/DotNetSummitMobileApp/Pages/SpeakersPage.xaml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="DotNetSummitMobileApp.Pages.SpeakersPage" 
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    x:Class="DotNetSummitMobileApp.Pages.SpeakersPage" 
     BackgroundColor="White">
     <ContentPage.Content>
-        <StackLayout Orientation="Vertical"
-            HorizontalOptions="FillAndExpand"
-            VerticalOptions="FillAndExpand"
-            Spacing="0"
-            Padding="0"
-            Margin="0">
+        <StackLayout>
             <ActivityIndicator x:Name="ActivityIndicatorView"
                 HorizontalOptions="CenterAndExpand"
                 VerticalOptions="CenterAndExpand"
@@ -19,8 +16,6 @@
             </ActivityIndicator>
             <ListView x:Name="SpeakersListView"
                 CachingStrategy="RecycleElement"
-                HorizontalOptions="FillAndExpand"
-                VerticalOptions="FillAndExpand"
                 SeparatorColor="#CECED2"
                 HasUnevenRows="true"
                 IsVisible="false"
@@ -28,15 +23,24 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal" Padding="16" Margin="0" Spacing="16">
+                            <StackLayout Orientation="Horizontal"
+                                Padding="16"
+                                Spacing="16">
                                 <Image Source="{Binding Path=Photo}"
                                     HorizontalOptions="Start"
                                     VerticalOptions="CenterAndExpand"
                                     WidthRequest="64"
                                     HeightRequest="64" />
-                                <StackLayout Orientation="Vertical" Padding="0" Margin="0" Spacing="4" HorizontalOptions="FillAndExpand" VerticalOptions="Center">
-                                    <Label Text="{Binding Path=FullName}" FontSize="16" TextColor="Black" FontAttributes="Bold" />
-                                    <Label Text="{Binding Path=Position}" FontSize="12" TextColor="Gray" />
+                                <StackLayout Orientation="Vertical"
+                                    Spacing="4"
+                                    VerticalOptions="Center">
+                                    <Label Text="{Binding Path=FullName}"
+                                        FontSize="16"
+                                        TextColor="Black"
+                                        FontAttributes="Bold" />
+                                    <Label Text="{Binding Path=Position}"
+                                        FontSize="12"
+                                        TextColor="Gray" />
                                 </StackLayout>
                             </StackLayout>
                         </ViewCell>
